--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,8 @@ h3 {
 }
 
 hr {
-    border: dotted #eaf6f6 6px; 
-    width: 6%;
+    border: dotted #97bfb4 6px; 
+    width: 25%;
     border-bottom: none;
     border: 80px 0px ;
    
